tests/js_error/source_locations/statement/for_await/iterator_unpack_result_module.exp
TypeError: iterator's next method must return an object
   ┌ source_locations/statement/for_await/iterator_unpack_result_module.js:12:20
   |
12 |   for await (var x of iter) {}
   |                    ^
Stack trace:
  at next (<native>)
  at foo (source_locations/statement/for_await/iterator_unpack_result_module.js:12:20)
  at <module> (source_locations/statement/for_await/iterator_unpack_result_module.js:15:7)