tests/js_error/source_locations/statement/for_await/iterator_unpack_result_module.js
var iter = {
  [Symbol.iterator]: function() {
    return {
      next() {
        return 1;
      }
    }
  }
}

async function foo() {
  for await (var x of iter) {}
}

await foo();